--- a/src/app/schemer/rich-text-editor/rich-text-editor.component.scss
+++ b/src/app/schemer/rich-text-editor/rich-text-editor.component.scss
@@ -1,8 +1,9 @@
-tiptap-editor {
-  height: 60%;
-  border: 1px solid;
-  margin: 0 20px;
+.editor-wrapper {
+  display: block;
+  border: lightgrey solid 1px;
+  overflow-x: auto;
 }
+
 :host ::ng-deep div.ProseMirror {
   height: 99%;
   outline: none;
@@ -44,7 +45,6 @@ button.active {
 
 .editor-control-panel {
   margin-bottom: 20px;
-  background: linear-gradient(to top right, #FFF5F8, #FAFAFA);
   font: unset;
   max-width: 1100px;
   margin-left: auto;
