--- a/src/app/schemer/schemer.component.scss
+++ b/src/app/schemer/schemer.component.scss
@@ -31,7 +31,7 @@
   background-color: #90d2d2;
 }
 
-.var-scheme-container {
+.var-coding-container {
   background-color: white;
   overflow-x: hidden;
   overflow-y: auto;
