--- a/src/app/schemer/var-coding/var-codes-full/code-full.component.html
+++ b/src/app/schemer/var-coding/var-codes-full/code-full.component.html
@@ -76,7 +76,7 @@
   <mat-card class="fx-flex-fill" [style.padding-left.px]="4">
     <mat-card-subtitle class="fx-row-space-between-center">
       {{'manual-instruction.prompt-code' | translate}}
-      <button mat-flat-button (click)="editTextDialog_manualInstruction()">
+      <button mat-flat-button (click)="editTextDialog_manualInstruction(translateService, editTextDialog)">
         <mat-icon>edit</mat-icon>
       </button>
     </mat-card-subtitle>
