--- a/src/app/schemer/var-coding/var-coding.component.html
+++ b/src/app/schemer/var-coding/var-coding.component.html
@@ -78,15 +78,28 @@
       </mat-card-content>
     </mat-card>
   </div>
-  <var-codes-full class="fx-flex-row-100" [style.margin-top.px]="10"
-                  [codes]="varCoding.codes"
-                  (codesChanged)="lastChangeFrom$.next('var-codes-full codes')"
-                  [processing]="varCoding.processing"
-                  (processingChanged)="lastChangeFrom$.next('var-codes-full processing')"
-                  [codeModelParameters]="varCoding.codeModelParameters"
-                  (codeModelParametersChanged)="lastChangeFrom$.next('var-codes-full codeModelParameters')"
-                  [allVariables]="allVariables">
-  </var-codes-full>
+  <ng-container [ngSwitch]="varCoding.codeModel">
+    <var-codes-manual *ngSwitchCase="'MANUAL'"
+                    class="fx-flex-row-100" [style.margin-top.px]="10"
+                    [codes]="varCoding.codes"
+                    (codesChanged)="lastChangeFrom$.next('var-codes-full codes')"
+                    [processing]="varCoding.processing"
+                    (processingChanged)="lastChangeFrom$.next('var-codes-full processing')"
+                    [codeModelParameters]="varCoding.codeModelParameters"
+                    (codeModelParametersChanged)="lastChangeFrom$.next('var-codes-full codeModelParameters')"
+                    [allVariables]="allVariables">
+    </var-codes-manual>
+    <var-codes-full *ngSwitchDefault
+                    class="fx-flex-row-100" [style.margin-top.px]="10"
+                    [codes]="varCoding.codes"
+                    (codesChanged)="lastChangeFrom$.next('var-codes-full codes')"
+                    [processing]="varCoding.processing"
+                    (processingChanged)="lastChangeFrom$.next('var-codes-full processing')"
+                    [codeModelParameters]="varCoding.codeModelParameters"
+                    (codeModelParametersChanged)="lastChangeFrom$.next('var-codes-full codeModelParameters')"
+                    [allVariables]="allVariables">
+    </var-codes-full>
+  </ng-container>
 </div>
 
 
