--- a/src/app/schemer/var-coding/var-coding.component.html
+++ b/src/app/schemer/var-coding/var-coding.component.html
@@ -48,9 +48,6 @@
       <mat-form-field>
         <mat-label>{{ 'code-model.prompt' | translate }}</mat-label>
         <mat-select [(value)]="varCoding.codeModel">
-          <mat-option [value]="'NONE'">
-            {{'code-model.NONE' | translate}}
-          </mat-option>
           <mat-option [value]="'CHOICE'">
             {{'code-model.CHOICE' | translate}}
           </mat-option>
@@ -62,6 +59,9 @@
           </mat-option>
           <mat-option [value]="'MANUAL'">
             {{'code-model.MANUAL' | translate}}
+          </mat-option>
+          <mat-option [value]="'NONE'">
+            {{'code-model.NONE' | translate}}
           </mat-option>
         </mat-select>
       </mat-form-field>
@@ -89,6 +89,16 @@
                     (codeModelParametersChanged)="lastChangeFrom$.next('var-codes-full codeModelParameters')"
                     [allVariables]="allVariables">
     </var-codes-manual>
+    <var-codes-value-list *ngSwitchCase="'VALUE_LIST'"
+                      class="fx-flex-row-100" [style.margin-top.px]="10"
+                      [codes]="varCoding.codes"
+                      (codesChanged)="lastChangeFrom$.next('var-codes-full codes')"
+                      [processing]="varCoding.processing"
+                      (processingChanged)="lastChangeFrom$.next('var-codes-full processing')"
+                      [codeModelParameters]="varCoding.codeModelParameters"
+                      (codeModelParametersChanged)="lastChangeFrom$.next('var-codes-full codeModelParameters')"
+                      [allVariables]="allVariables">
+    </var-codes-value-list>
     <var-codes-full *ngSwitchDefault
                     class="fx-flex-row-100" [style.margin-top.px]="10"
                     [codes]="varCoding.codes"
